--- a/assets/sass/ie8.scss
+++ b/assets/sass/ie8.scss
@@ -1,148 +1,181 @@
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
-@import 'libs/skel';
 
 /*
-	Highlights by HTML5 UP
+	Helios by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
 /* Basic */
 
-	body, html {
-		height: 100%;
+	a {
+		border-bottom: solid 1px #ddd;
 	}
 
-	html {
-		background: none;
+	hr {
+		border-top: solid 1px #777;
+		border-bottom: solid 1px #777;
+	}
+
+	.timestamp {
+		color: #777;
+	}
+
+/* Section/Article */
+
+	section, article {
+		> .last-child, &.last-child {
+			margin-bottom: 0;
+		}
 	}
 
 /* List */
 
 	ul {
-		&.actions {
+		&.divided {
 			li {
-				padding: 0 0 0 (_size(element-margin) * 0.5);
-
-				&:first-child {
-					padding-left: 0;
-				}
+				border-top: solid 1px #777;
 			}
 		}
-	}
-
-/* Form */
-
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	select,
-	textarea {
-		border: solid 2px _palette(border);
-		position: relative;
-	}
-
-	input[type="text"],
-	input[type="password"],
-	input[type="email"] {
-		line-height: _size(element-height);
-	}
-
-	input[type="checkbox"],
-	input[type="radio"] {
-		font-size: 3em;
-
-		& + label {
-			&:before {
-				display: none;
+		&.menu {
+			li {
+				border-left: solid 1px #777;
 			}
+		}
+
+		&.icons {
+			background: #333;
+			-ms-behavior: url('assets/js/ie/PIE.htc');
 		}
 	}
 
 /* Button */
 
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	button,
 	.button {
-		border: solid 2px _palette(border);
+		-ms-behavior: url('assets/js/ie/PIE.htc');
 	}
 
-/* Main BG */
+/* Icons */
 
-	.main-bg {
-		z-index: 0;
-	}
-
-/* Main */
-
-	.main {
-		background-size: cover;
-
-		.container {
-			background: _palette(bg);
-			border-top: solid 1px _palette(border);
-			position: relative;
-			z-index: 1;
-		}
-
-		.goto-next {
-			@include icon;
-
-			&:before {
-				color: _palette(border);
-				content: '\f063';
-				display: block;
-				font-size: 2em;
-				height: 2em;
-				left: 0;
-				line-height: 2em;
-				position: absolute;
-				text-align: center;
-				text-indent: 0;
-				top: 0;
-				width: 2em;
-			}
-		}
+	.icon.circled {
+		-ms-behavior: url('assets/js/ie/PIE.htc');
 	}
 
 /* Header */
 
 	#header {
 		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
-		background-image: url('../../images/bg.jpg');
-		background-size: cover;
-		height: 100%;
+	}
 
-		&:after {
-			min-height: 100%;
+	body.homepage {
+		#header {
+			height: auto;
+			min-height: 0;
+			padding: 12em 0 12em 0;
+
+			&:after {
+				display: none;
+			}
+		}
+	}
+
+/* Nav */
+
+	#nav {
+		> ul {
+			&:before, &:after {
+				border-top: solid 1px #777;
+				border-bottom: solid 1px #777;
+			}
+
+			> li {
+				-ms-behavior: url('assets/js/ie/PIE.htc');
+
+				&.active {
+					border-color: #999;
+				}
+			}
+		}
+	}
+
+	.dropotron {
+		background: #fff;
+		-ms-behavior: url('assets/js/ie/PIE.htc');
+
+		li {
+			border-color: #eee;
+			padding-right: 1em;
+			color: #5b5b5b;
 		}
 
-		header {
-			position: relative;
-			z-index: 1;
+		&.level-0 {
+			box-shadow: none !important;
+			margin-top: 1em;
+		}
+	}
+
+/* Carousel */
+
+	.carousel {
+		.forward, .backward {
+			border-radius: 100%;
+			background-color: #483949;
+			width: 7em;
+			height: 7em;
+			margin-top: -3.5em;
+			border-radius: 100%;
+			-ms-behavior: url('assets/js/ie/PIE.htc');
+
+			&:before {
+				display: none;
+			}
 		}
 
-		.container {
-			background: _palette(bg);
-			z-index: 1;
+		.forward {
+			right: -3.5em;
+		}
+
+		.backward {
+			left: -3.5em;
 		}
 	}
 
 /* Footer */
 
 	#footer {
-		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
-		background-image: url('../../images/bg.jpg');
-		background-size: cover;
+		ul {
+			&.divided {
+				li {
+					border-color: #3B373C;
+				}
+			}
 
-		.container {
-			background: _palette(bg);
-			border-top: solid 1px _palette(border);
-			position: relative;
-			z-index: 1;
+			&.menu {
+				li {
+					border-color: #3B373C;
+				}
+			}
+		}
+
+		hr {
+			border-color: #3B373C;
+		}
+
+		.icons {
+			background: #2F2930;
+		}
+
+		.copyright {
+			color: #777;
+			a {
+				color: #aaa;
+				border: 0;
+
+				&:hover {
+					color: #ccc;
+				}
+			}
 		}
 	}
